grammar.js
    source_file: ($) =>
      seq(
        repeat($.use_declaration),
        repeat(
          choice(
            $.window_declaration,
            $.pattern_declaration,
            $.preset_declaration,
            $.list_declaration,
            $.rule_declaration,
            $.test_block,
            $.scenario_declaration,
          ),
        ),
      ),

    use_declaration: ($) => seq("use", field("path", $.string)),

    scenario_declaration: ($) =>
      seq(
        repeat($.scenario_attribute),
        "scenario",
        field("name", $.identifier),
        optional($.scenario_inline_annotations),
        "{",
        repeat($.scenario_body_item),
        "}",
      ),

    scenario_body_item: ($) =>
      choice($.background_block, $.inject_block, $.replay_statement),

    scenario_attribute: ($) => seq("#[", $.attribute_list, "]"),

    scenario_inline_annotations: ($) => seq("<", $.attribute_list, ">"),

    attribute_list: ($) =>
      seq($.attribute, repeat(seq(",", $.attribute))),

    attribute: ($) =>
      seq(field("key", $.identifier), "=", field("value", $.attribute_value)),

    attribute_value: ($) =>
      choice(
        $.string,
        $.number,
        $.duration,
        $.boolean,
        $.identifier,
        $.json_object,
        $.json_array,
      ),

    background_block: ($) =>
      seq(
        "background",
        "{",
        repeat(choice($.background_stream, $.entity_distribution)),
        "}",
      ),

    background_stream: ($) =>
      seq(
        "stream",
        field("stream", $.identifier),
        "gen",
        field("rate", $.rate_expression),
        optional(";"),
      ),

    entity_distribution: ($) =>
      seq(
        "entity",
        field("window", $.identifier),
        ".",
        field("field", $.identifier),
        "zipf",
        "(",
        $.zipf_argument_list,
        ")",
        optional(";"),
      ),

    zipf_argument_list: ($) =>
      seq($.zipf_argument, repeat(seq(",", $.zipf_argument))),

    zipf_argument: ($) =>
      seq(field("key", $.identifier), "=", field("value", $.number)),

    rate_expression: ($) =>
      choice($.rate, $.wave_rate, $.burst_rate, $.timeline_rate),

    wave_rate: ($) =>
      seq(
        "wave",
        "(",
        "base",
        "=",
        field("base", $.rate),
        ",",
        "amp",
        "=",
        field("amp", $.rate),
        ",",
        "period",
        "=",
        field("period", $.duration),
        optional(seq(",", "shape", "=", field("shape", $.identifier))),
        ")",
      ),

    inject_block: ($) =>
      seq("inject", "{", repeat($.inject_case), "}"),

    inject_case: ($) =>
      seq(
        field("mode", $.inject_mode),
        "<",
        optional($.entity_selector),
        field("entity_count", $.number),
        ">",
        "for",
        field("rule", $.identifier),
        field("stream", $.identifier),
        "{",
        repeat($.inject_body_item),
        "}",
      ),

    entity_selector: ($) => seq(field("field", $.identifier), ":"),

    inject_mode: (_$) => choice("hit", "near_miss", "miss"),

    inject_body_item: ($) =>
      choice($.use_step, $.without_step, $.join_block, $.spread_statement),

    use_step: ($) =>
      seq(
        optional("then"),
        "use",
        $.value_source,
        "x",
        field("count", $.number),
        optional(";"),
      ),

    value_source: ($) =>
      choice($.predicate_group, $.inline_json_group, $.file_source),

    predicate_group: ($) => seq("(", $.field_predicate_list, ")"),

    inline_json_group: ($) =>
      seq("(", choice($.json_object, $.json_array), ")"),

    file_source: ($) => seq("from", field("file", $.string)),

    field_predicate_list: ($) =>
      seq($.field_predicate, repeat(seq(",", $.field_predicate))),

    field_predicate: ($) =>
      seq(field("field", $.identifier), "=", field("value", $.attribute_value)),

    without_step: ($) =>
      seq(
        optional("then"),
        "without",
        "(",
        $.field_predicate_list,
        ")",
        optional(seq("within", field("within", $.duration))),
        optional(";"),
      ),

    join_block: ($) =>
      seq(
        "join",
        field("window", $.identifier),
        "as",
        field("key", $.identifier),
        "{",
        repeat($.use_step),
        "}",
      ),

    spread_statement: ($) =>
      seq("spread", field("duration", $.duration), optional(";")),

    // --- replay：`replay conn_events { use from "raw/monday.ndjson" }` ---
    replay_statement: ($) =>
      seq(
        "replay",
        field("window", $.identifier),
        "{",
        "use",
        $.file_source,
        optional(";"),
        "}",
      ),

    // --- inline JSON values (`use({...})`)，顶层键即字段 ---
    json_value: ($) =>
      choice(
        $.json_object,
        $.json_array,
        $.json_string,
        $.json_number,
        $.boolean,
        $.json_null,
      ),

    json_object: ($) =>
      seq(
        "{",
        optional(seq($.json_pair, repeat(seq(",", $.json_pair)), optional(","))),
        "}",
      ),

    json_pair: ($) =>
      seq(field("key", $.json_string), ":", field("value", $.json_value)),

    json_array: ($) =>
      seq(
        "[",
        optional(seq($.json_value, repeat(seq(",", $.json_value)), optional(","))),
        "]",
      ),

    json_string: (_$) =>
      token(seq('"', repeat(choice(/[^"\\]/, /\\./)), '"')),

    json_number: (_$) => token(/-?\d+(\.\d+)?([eE][+-]?\d+)?/),

    json_null: (_$) => "null",

    rate: (_$) => token(/\d+(\.\d+)?\/[smh]/),

    number: (_$) => token(/\d+(\.\d+)?/),

    string: (_$) =>
      token(seq('"', repeat(choice(/[^"\\]/, /\\./)), '"')),

    boolean: (_$) => choice("true", "false"),

    duration: (_$) => token(/\d+(ms|[smhd])/),

    identifier: (_$) => token(/[a-zA-Z_][a-zA-Z0-9_]*/),
  },
});
