test/corpus/wfg.txt
==================
Scenario Background Inject Replay
==================

use "../schemas/security.wfs"
use "../rules/ssh_brute_force.wfl"

#[duration=10m]
scenario ssh_brute<seed=42> {
  background {
    stream auth_events gen 50/s
    stream conn_events gen wave(base=10/s, amp=2/s, period=2m, shape=sine)
    entity auth_events.sip zipf(pool=1000, exponent=1.1, fresh=0.2)
  }

  inject {
    hit<sip: 500> for ssh_brute_force auth_events {
      use(result="failed", service="ssh") x 12
      spread 10m
    }

    near_miss<sip: 200> for chain_attack conn_events {
      use(action="syn") x 5
      then use({ "dport": 22, "tags": ["a", "b"], "nested": { "k": null } }) x 6
      without(action="login_ok") within 5m
      join auction_events as seller {
        use from "raw/ref.ndjson" x 1
      }
    }

    miss<100> for ssh_brute_force auth_events {
      use(result="success") x 1
    }
  }

  replay conn_events { use from "raw/monday.ndjson" }
}

---

(source_file
  (use_declaration
    (string))
  (use_declaration
    (string))
  (scenario_declaration
    (scenario_attribute
      (attribute_list
        (attribute
          (identifier)
          (attribute_value
            (duration)))))
    (identifier)
    (scenario_inline_annotations
      (attribute_list
        (attribute
          (identifier)
          (attribute_value
            (number)))))
    (scenario_body_item
      (background_block
        (background_stream
          (identifier)
          (rate_expression
            (rate)))
        (background_stream
          (identifier)
          (rate_expression
            (wave_rate
              (rate)
              (rate)
              (duration)
              (identifier))))
        (entity_distribution
          (identifier)
          (identifier)
          (zipf_argument_list
            (zipf_argument
              (identifier)
              (number))
            (zipf_argument
              (identifier)
              (number))
            (zipf_argument
              (identifier)
              (number))))))
    (scenario_body_item
      (inject_block
        (inject_case
          (inject_mode)
          (entity_selector
            (identifier))
          (number)
          (identifier)
          (identifier)
          (inject_body_item
            (use_step
              (value_source
                (predicate_group
                  (field_predicate_list
                    (field_predicate
                      (identifier)
                      (attribute_value
                        (string)))
                    (field_predicate
                      (identifier)
                      (attribute_value
                        (string))))))
              (number)))
          (inject_body_item
            (spread_statement
              (duration))))
        (inject_case
          (inject_mode)
          (entity_selector
            (identifier))
          (number)
          (identifier)
          (identifier)
          (inject_body_item
            (use_step
              (value_source
                (predicate_group
                  (field_predicate_list
                    (field_predicate
                      (identifier)
                      (attribute_value
                        (string))))))
              (number)))
          (inject_body_item
            (use_step
              (value_source
                (inline_json_group
                  (json_object
                    (json_pair
                      (json_string)
                      (json_value
                        (json_number)))
                    (json_pair
                      (json_string)
                      (json_value
                        (json_array
                          (json_value
                            (json_string))
                          (json_value
                            (json_string)))))
                    (json_pair
                      (json_string)
                      (json_value
                        (json_object
                          (json_pair
                            (json_string)
                            (json_value
                              (json_null)))))))))
              (number)))
          (inject_body_item
            (without_step
              (field_predicate_list
                (field_predicate
                  (identifier)
                  (attribute_value
                    (string))))
              (duration)))
          (inject_body_item
            (join_block
              (identifier)
              (identifier)
              (use_step
                (value_source
                  (file_source
                    (string)))
                (number)))))
        (inject_case
          (inject_mode)
          (number)
          (identifier)
          (identifier)
          (inject_body_item
            (use_step
              (value_source
                (predicate_group
                  (field_predicate_list
                    (field_predicate
                      (identifier)
                      (attribute_value
                        (string))))))
              (number))))))
    (scenario_body_item
      (replay_statement
        (identifier)
        (file_source
          (string))))))

==================
Scenario Minimal Background
==================

use "../schemas/security.wfs"

scenario ssh_brute_quick {
  background {
    stream auth_events gen 50/s
  }
}

---

(source_file
  (use_declaration
    (string))
  (scenario_declaration
    (identifier)
    (scenario_body_item
      (background_block
        (background_stream
          (identifier)
          (rate_expression
            (rate)))))))

==================
Scenario Inline JSON Containers
==================

scenario json_shapes {
  background { stream conn_events gen 1/s }

  inject {
    hit<1> for r conn_events {
      use([{ "a": 1 }, { "a": 2 }]) x 1
      then use(kind=[1, 2], nested={ "k": true }) x 1
    }
  }
}

---

(source_file
  (scenario_declaration
    (identifier)
    (scenario_body_item
      (background_block
        (background_stream
          (identifier)
          (rate_expression
            (rate)))))
    (scenario_body_item
      (inject_block
        (inject_case
          (inject_mode)
          (number)
          (identifier)
          (identifier)
          (inject_body_item
            (use_step
              (value_source
                (inline_json_group
                  (json_array
                    (json_value
                      (json_object
                        (json_pair
                          (json_string)
                          (json_value
                            (json_number)))))
                    (json_value
                      (json_object
                        (json_pair
                          (json_string)
                          (json_value
                            (json_number))))))))
              (number)))
          (inject_body_item
            (use_step
              (value_source
                (predicate_group
                  (field_predicate_list
                    (field_predicate
                      (identifier)
                      (attribute_value
                        (json_array
                          (json_value
                            (json_number))
                          (json_value
                            (json_number)))))
                    (field_predicate
                      (identifier)
                      (attribute_value
                        (json_object
                          (json_pair
                            (json_string)
                            (json_value
                              (boolean)))))))))
              (number))))))))
